# ot-harjoitustyo

./: .gitignore  README.md
dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: luokkakaavio1.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: luokkakaavio.md  luokkakaavio1.md
study-app/: .coveragerc  .env  .env.test  .gitignore  .pylintrc  pyproject.toml  tasks.py
study-app/data/: studies.sqlite
study-app/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
study-app/dokumentaatio/kuvat/: pakkauskaavio
study-app/src/: config.py  database_connection.py  index.py  initialize_database.py  study_app.py
study-app/src/entities/: course.py  task.py  user.py
study-app/src/repositories/: course_repository.py  task_repository.py  user_repository.py
study-app/src/services/: study_app_service.py  study_app_services.py
study-app/src/tests/: conftest.py  test_course.py  test_services.py  test_task.py  test_user.py  tests.py
study-app/src/theme/ttk-Breeze-0.6/: breeze.tcl
study-app/src/ui/: all_courses_view.py  all_tasks_view.py  course_view.py  login_view.py  navigation.py  register_view.py  task_view.py  ui.py  welcome_view.py
