[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["erjav <erja.vaskivuori@helsinki.fi>"]
readme = "README.md"
packages = [{include = "ot_harjoitustyo"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.3"
python-dotenv = "^0.21.0"
tkcalendar = "^1.6.1"
coverage = "^6.5.0"
tk = "^0.1.0"


[tool.poetry.group.dev.dependencies]
pytest-dotenv = "^0.5.2"
autopep8 = "^2.0.0"
pytest = "^7.2.0"
pylint = "^2.15.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
